reports/release/v6.0.0-pre/release-acceptance.md
# DIP Release Acceptance

Release version: `v6.0.0-pre`
Source commit: `local-validation`
Validation passed: `True`
Computed policy preflight observed: `True`
Computed policy preflight result: `approval_required`
Computed policy engine observed: `True`
Computed policy engine result: `approval_required`
Policy engine valid: `True`
Policy engine supported rule types: `5`
Policy engine active policies: `5`
Policy engine revoked policies: `0`
Policy engine deny precedence enforced: `True`
Policy engine escalate outcome supported: `True`
Policy engine compatibility valid: `True`
Computed simulation observed: `True`
Computed simulation cases: `13`
Computed simulation domains: `3`
Computed simulation decision shapes: `3`
Computed decision diff observed: `True`
Computed decision diff changed outcomes: `3`
Case manifest valid: `True`
Case manifest artifacts: `44`
Durable case manifest observed: `True`
Durable case manifest valid: `True`
Append-only chain valid: `True`
Case mutation detected: `False`
Replay from manifest observed: `True`
Approval bound to manifest: `True`
Approval role binding valid: `True`
Approval authority evaluated: `True`
Approval authority valid: `True`
AI self-approval blocked: `True`
External identity provider observed: `False`
Repository governance policy observed: `True`
Admin enforcement required: `True`
Required status checks observed: `True`
Required approving review count observed: `1`
Codeowner review required observed: `True`
Conversation resolution required observed: `True`
Break-glass policy defined: `True`
Release lifecycle policy observed: `True`
Release lifecycle valid: `True`
External identity contract observed: `True`
External identity contract valid: `True`
Live external identity provider authenticated: `False`
Live identity RBAC observed: `True`
Live identity RBAC provider: `github`
Live identity RBAC subject: `raghurammutya`
Live identity RBAC repository permission: `admin`
Live identity RBAC permission sufficient: `True`
Live identity RBAC decision scope authorized: `True`
Live identity RBAC MFA claim observed: `False`
Live identity RBAC valid: `True`
Durable evidence store policy observed: `True`
Durable store contract valid: `True`
Production storage backend observed: `False`
Capability governance observed: `True`
Capability governance valid: `True`
Resolved capability count: `3`
Shared context contract observed: `True`
Shared context contract valid: `True`
Solo-maintainer exception observed: `True`
Solo-maintainer exception valid: `True`
Solo-maintainer constraint: `True`
Independent human review available: `False`
Independent human review observed: `False`
Review relaxation allowed: `True`
Review relaxation max minutes: `30`
Review gate restoration required: `True`
Schema stability observed: `True`
Schema stability valid: `True`
Frozen contract count: `19`
Compatibility rule count: `5`
Negative fixture count: `12`
Negative fixtures valid: `True`
External approval boundary observed: `True`
External approval boundary valid: `True`
Live external approval system observed: `False`
Decision approval required: `True`
Decision approval separate from code merge: `True`
GitHub code review is decision approval: `False`
Solo-maintainer exception is decision approval: `False`
External approval required evidence count: `10`
External approval required evidence complete: `True`
External approval admission controls complete: `True`
External approval adapter observed: `True`
External approval adapter valid: `True`
External approval adapter required operations complete: `True`
External approval adapter denied operations complete: `True`
External approval adapter request evidence complete: `True`
External approval adapter decision evidence complete: `True`
External approval adapter decision lifecycle complete: `True`
External approval adapter admission controls complete: `True`
External approval adapter audit requirements complete: `True`
External approval adapter boundary compatible: `True`
External approval adapter live system observed: `False`
External approval adapter AI approval allowed: `False`
Durable case store adapter observed: `True`
Durable case store adapter valid: `True`
Adapter production storage backend observed: `False`
Adapter append-only writes required: `True`
Adapter content-addressed records required: `True`
Adapter delete denied required: `True`
Adapter mutation detection required: `True`
Adapter replay export required: `True`
Adapter audit export required: `True`
Adapter retention policy valid: `True`
Adapter required operations complete: `True`
Adapter denied operations complete: `True`
Evidence store adapter parity observed: `True`
Evidence store adapter parity valid: `True`
Adapter required operations valid: `True`
Adapter denied operations enforced: `True`
Adapter append case record valid: `True`
Adapter read case record valid: `True`
Adapter verify manifest chain valid: `True`
Adapter export replay pack valid: `True`
Adapter export audit pack valid: `True`
Adapter runtime backend invoked: `False`
Durable evidence backend observed: `True`
Durable evidence backend valid: `True`
Durable backend runtime invoked: `False`
Release promotion chain observed: `True`
Release promotion chain valid: `True`
Immutable artifact digest observed: `True`
Source commit bound: `True`
Build run id observed: `True`
Rollback evidence valid: `True`
Prod deployment executed: `False`
Pre-runtime GA observed: `True`
Pre-runtime GA valid: `True`
Pre-runtime GA status: `pre_runtime_ga_complete_runtime_blocked`
v3.1 governance closure valid: `True`
v3.1 independent human review observed: `False`
v3.2 external identity boundary valid: `True`
v3.2 external identity live ready: `False`
v3.2 MFA claim observed: `False`
v3.3 external approval boundary valid: `True`
v3.3 external approval live ready: `False`
v3.3 AI approval allowed: `False`
v3.4 production case store contract ready: `True`
v3.4 production case store live ready: `False`
v3.5 runtime control plane design valid: `True`
v3.5 runtime authority grant allowed: `False`
v3.6 advisory runtime pilot valid: `True`
v3.6 advisory side effects executed: `False`
v4.0 limited runtime authority gate complete: `True`
v4.0 limited runtime authority granted: `False`
v4.0 status: `v4_0_authority_gate_complete_authority_blocked`
v4.1 live identity evidence gate complete: `True`
v4.1 live identity authority ready: `False`
v4.1 MFA claim observed: `False`
v4.2 live approval provider gate complete: `True`
v4.2 live approval provider ready: `False`
v4.2 AI approval allowed: `False`
v4.3 production case store gate complete: `True`
v4.3 production case store live ready: `False`
v4.4 release promotion execution gate complete: `True`
v4.4 prod deployment executed: `False`
v5.0 governed advisory runtime complete: `True`
v5.0 runtime recommendation only: `True`
v5.0 side effects executed: `False`
v5.5 controlled runtime execution gate complete: `True`
v5.5 controlled runtime execution authorized: `False`
v6.0 platform hardening assessment complete: `True`
v6.0 platform production ready: `False`
v6.0 hardening controls: `11`
Runtime readiness assessment observed: `True`
Runtime readiness percent: `0.0`
Production decision authority percent: `0.0`
Product review surface observed: `True`
Product review surface count: `34`
Runtime integration authorized: `False`
Production decision execution authorized: `False`
Release acceptance passed: `True`

## Blocked Claims

- `runtime integration is authorized`
- `production decision execution is authorized`
- `independent human review was observed for solo-maintainer merges`
- `live external decision approval system is observed`
- `live external approval adapter system is observed`
- `live external identity MFA claim is observed`
- `production durable case store backend is observed`
- `production promotion deployment was executed`
- `limited runtime authority is granted`
- `live identity authority is ready`
- `live approval provider is ready`
- `production case store live backend is ready`
- `controlled runtime execution is authorized`
- `platform production readiness is complete`
